# Encrypt-it

./: Cargo.toml  README.md
src/: crypto.rs  main.rs
src/themes/: catppuccin.rs  mod.rs
~/.oh-my-zsh/cache/: DEBS_installed
