[package]
name = "chacha20poly1305"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
env_logger = "0.11.3"
rfd = "0.14.1"
rand = "0.8"
anyhow = "1.0"
human-duration = "0.1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }